--- a/resources/assets/js/views/client/list.html
+++ b/resources/assets/js/views/client/list.html
@@ -23,7 +23,7 @@
                             <td>{{o.phone}}</td>
                             <td>
                                 <a ng-href="#/clients/{{o.id}}/edit" class="label label-warning">Edit</a> |
-                                <a ng-href="#/clients/{{o.id}}/remove" ng-click="remove(o.id)" class="label label-danger">Delete</a>
+                                <a ng-href="#/clients/{{o.id}}/remove" ng-click="remove()" class="label label-danger">Delete</a>
                             </td>
                         </tr>
                         </tbody>
