--- a/resources/assets/js/views/client/new.html
+++ b/resources/assets/js/views/client/new.html
@@ -15,7 +15,7 @@
                             <label class="col-md-4 control-label">Name</label>
                             <div class="col-md-6">
                                 <input type="text" class="form-control" name="name" ng-model="client.name" required>
-                                <div ng-messages="form.name.$error" class="help-block" ng-show="form.name.$touched" ng-if="!form.name.$dirty">
+                                <div ng-messages="form.name.$error" class="help-block" ng-show="form.name.$touched">
                                     <div ng-message="required">Required Field</div>
                                 </div>
                             </div>
@@ -26,8 +26,7 @@
                             <label class="col-md-4 control-label">Responsible</label>
                             <div class="col-md-6">
                                 <input type="text" class="form-control" name="responsible" ng-model="client.responsible" required>
-                                <div ng-messages="form.responsible.$error" class="help-block"
-                                     ng-show="form.responsible.$touched" ng-if="!form.responsible.$dirty">
+                                <div ng-messages="form.responsible.$error" class="help-block" ng-show="form.responsible.$touched">
                                     <div ng-message="required">Required Field</div>
                                 </div>
                             </div>
@@ -37,7 +36,7 @@
                             <label class="col-md-4 control-label">E-mail</label>
                             <div class="col-md-6">
                                 <input type="email" class="form-control" name="email" ng-model="client.email" required>
-                                <div ng-messages="form.email.$error" class="help-block" ng-show="form.email.$touched" ng-if="!form.email.$dirty">
+                                <div ng-messages="form.email.$error" class="help-block" ng-show="form.email.$touched">
                                     <div ng-message="required">Required Field</div>
                                     <div ng-message="email">Invalid e-mail</div>
                                 </div>
@@ -48,7 +47,7 @@
                             <label class="col-md-4 control-label">Phone</label>
                             <div class="col-md-6">
                                 <input type="text" class="form-control" name="phone" ng-model="client.phone" required>
-                                <div ng-messages="form.phone.$error" class="help-block" ng-show="form.phone.$touched" ng-if="!form.phone.$dirty">
+                                <div ng-messages="form.phone.$error" class="help-block" ng-show="form.phone.$touched">
                                     <div ng-message="required">Required Field</div>
                                 </div>
                             </div>
@@ -59,13 +58,13 @@
                             <label class="col-md-4 control-label">Address</label>
                             <div class="col-md-6">
                                 <textarea class="form-control" name="address" ng-model="client.address" required></textarea>
-                                <div ng-messages="form.address.$error" class="help-block" ng-show="form.address.$touched" ng-if="!form.address.$dirty">
+                                <div ng-messages="form.address.$error" class="help-block" ng-show="form.address.$touched">
                                     <div ng-message="required">Required Field</div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="form-group" ng-class="{ 'has-error': !form.obs.$valid && form.obs.$touched }">
+                        <div class="form-group">
                             <label class="col-md-4 control-label">Obs</label>
                             <div class="col-md-6">
                                 <textarea class="form-control" name="obs" ng-model="client.obs"></textarea>
