--- a/resources/assets/js/views/project/edit.html
+++ b/resources/assets/js/views/project/edit.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="panel panel-default">
-                <div class="panel-heading">New Project</div>
+                <div class="panel-heading">Edit Project</div>
                 <div class="panel-body">
 
                     <form class="form-horizontal" name="form" role="form" method="POST" ng-submit="save()">
